<resources>
    <!-- Application name -->
    <string name="app_name">Delivery Food</string>

    <!-- Fragments name -->
    <string name="restaurants">Рестораны</string>
    <string name="basket">Корзина</string>
    <string name="personal">Личное</string>
    <string name="orders">Заказы</string>
    <string name="dishes_list">Список блюд</string>
    <string name="requests">Заявки</string>
    <string name="user_list">Список пользователей</string>

    <!-- Toast -->
    <string name="fill_email_toast">Заполните поле Email</string>
    <string name="fill_password_toast">Заполните поле Пароль</string>
    <string name="fill_name_toast">Заполните поле Имя</string>
    <string name="fill_phone_number_toast">Заполните поле Номер телефона</string>
    <string name="fil_house_toast">Заполните поле Дом</string>
    <string name="fill_entry_toast">Заполните поле Подъезд</string>
    <string name="fill_floor_toast">Заполните поле Этаж</string>
    <string name="fill_flat_toast">Заполните поле Квартира</string>
    <string name="message_change_password_send_toast">Сообщение отправленно</string>
    <string name="something_went_wrong_toast">Что-то пошло не так</string>
    <string name="date_update_toast">Данные обновлены</string>
    <string name="change_address_fragment_address_add_toast">Адрес добавлен</string>


    <!-- Text view -->
    <string name="auth_fragment_change_password_text_view">Восстановить пароль</string>
    <string name="auth_fragment_create_account_now_text_view">Создайте аккаунт сейчас</string>
    <string name="auth_fragment_authorization_text_view">Авторизоваться</string>
    <string name="auth_fragment_enter_btn_text_and_text_view">Войти</string>
    <string name="account_fragment_my_orders_text_view">Мои заказы</string>
    <string name="account_fragment_my_data_text_view">Мои данные</string>
    <string name="account_fragment_my_address_text_view">Мой адрес</string>
    <string name="registration_fragment_registration_btn_text_and_text_view">Зарегистрироваться</string>

    <!-- Hint -->
    <string name="number_phone_hint">Номер телефона</string>
    <string name="password_hint">Пароль</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Имя</string>
    <string name="house_hint">Дом</string>
    <string name="entry_hint">Подъезд</string>
    <string name="floor_hint">Этаж</string>
    <string name="flat_hint">Квартира</string>
    <string name="restaurant_name_hint">Название ресторана</string>
    <string name="name_dishes_hint">Название блюда</string>

    <!-- Button text -->
    <string name="account_fragment_exit_btn_text">Выйти</string>
    <string name="account_fragment_save_btn_text">Сохранить</string>

    <string name="add_dishes">Добавление блюда</string>
    <string name="add_dishes_text_view">Добавить блюдо</string>
    <string name="calories_hint">Количество каллорий</string>
    <string name="coast_hint">Стоимость</string>
    <string name="orders_on_create_restaurant_btn_text">Заявка</string>
    <string name="order_successfully_sent">Заявка успешно отправлена</string>
    <string name="create_order">Оставить заявку</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="registration_btn_text_start_fragment">Регистрация</string>
    <string name="auth_btn_text_start_fragment">Авторизация</string>
    <string name="auth_text_view_auth_fragment">Авторизация</string>
    <string name="reset_pass">Забыли пароль?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>