<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AccountFragment">

    <TextView
        android:id="@+id/name_text_view"
        style="@style/largeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/orders_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_fragment_my_orders_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

    <Button
        android:id="@+id/data_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_fragment_my_data_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orders_user" />

    <Button
        android:id="@+id/address_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_fragment_my_address_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_user" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_fragment_exit_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>