<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.screens.auth.StartFragment">


    <View
        android:id="@+id/view_logo"
        style="@style/logoStyle"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        style="@style/largeStartText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_logo" />

    <Button
        android:id="@+id/auth_btn_start_fragment"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sp"
        android:text="@string/auth_btn_text_start_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <View
        android:id="@+id/under_line"
        android:layout_width="355dp"
        android:layout_height="2dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/button_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_btn_start_fragment" />

    <Button
        android:id="@+id/registration_btn_start_fragment"
        style="@style/button"
        android:padding="@dimen/_20sp"
        android:text="@string/registration_btn_text_start_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/under_line" />

</androidx.constraintlayout.widget.ConstraintLayout>