<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.screens.restaurant.AddDishesFragment">

    <TextView
        android:id="@+id/catalog_text_view"
        style="@style/largeText"
        android:text="@string/add_dishes_text_view"
        android:fontFamily="@font/comfortaa_regular"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_add_name_dishes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name_dishes_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catalog_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edt_add_name_dishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_add_coast_dishes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/coast_hint"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_add_name_dishes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edt_add_coast_dishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|textImeMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_add_calories_dishes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/calories_hint"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_add_coast_dishes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edt_add_calories_dishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|textImeMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:background="@color/design_default_color_secondary"
        android:id="@+id/add_image_dishes"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="@dimen/_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_add_calories_dishes" />

    <Button
        style="@style/button"
        android:id="@+id/btn_add_new_dishes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_dishes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_image_dishes" />

</androidx.constraintlayout.widget.ConstraintLayout>