<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.screens.auth.AuthFragment"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/auth_btn_back"
        style="@style/backButton"
        app:layout_constraintBottom_toTopOf="@+id/auth_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auth_text_view"
        style="@style/largeText"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/auth_text_view_auth_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email_hint"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_text_view"
        app:startIconDrawable="@drawable/account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/password_hint"
        app:counterEnabled="true"
        app:endIconMode="password_toggle"
        app:helperText="Минимальное число символов 6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
        app:startIconDrawable="@drawable/lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword|textImeMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_auth"
        style="@style/button"
        android:text="@string/auth_fragment_enter_btn_text_and_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password" />

    <View
        android:id="@+id/view_or"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_margin="20dp"
        android:background="@drawable/underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_auth" />

    <Button
        android:id="@+id/btn_auth_google"
        style="@style/button_auth_service"
        android:text="Войти с помощью Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_or" />

    <Button
        android:id="@+id/btn_auth_apple"
        style="@style/button_auth_service"
        android:text="Войти с помощью Apple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_auth_google" />

    <TextView
        android:id="@+id/auth_restore_password_text_view"
        style="@style/smallText"
        android:text="@string/reset_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>