<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.screens.user.ChangeDataFragment">

    <ImageButton
        android:id="@+id/order_restaurant_btn_back"
        style="@style/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:background="@color/white"
        android:src="@drawable/back_button"
        app:layout_constraintBottom_toTopOf="@+id/data_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/data_text_view"
        style="@style/largeText"
        android:layout_marginStart="@dimen/_32dp"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/account_fragment_my_data_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_change_name"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edt_change_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_change_number_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/number_phone_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_change_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_change_number_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textImeMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_changes"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_fragment_save_btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_change_number_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>